--- a/JSCamera.html
+++ b/JSCamera.html
@@ -1,18 +1,3 @@
-<style>
-    .box{
-        position: absolute;
-        font-size: 500;
-        top: -285px;
-        line-height: 0;
-        color: white;
-        overflow: hidden;
-        display:flex;
-    }
-    p.left{
-        padding-right: 300px;
-    }
-</style>
-
 <div id="container">
 
     <div class="select">
@@ -29,49 +14,36 @@
 
 </div>
 
-<div class="box">
-    <p class="left">[</p><p>]</p>
-</div>
-
 <script>
     const video = document.querySelector('video');
     const canvas = window.canvas = document.querySelector('canvas');
     const videoSelect = document.querySelector('select#videoSource');
-
     canvas.width = 480;
     canvas.height = 360;
-
     navigator.mediaDevices.enumerateDevices().then(gotDevices);
-
     const button = document.querySelector('.snapShot');
     button.onclick = function () {
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
         canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
     };
-
     var link = document.querySelector('.save');
     link.addEventListener('click', function (ev) {
         link.href = canvas.toDataURL();
         link.download = "mypainting.png";
     }, false);
-
     const constraints = {
         audio: false,
         video: true// { facingMode: { exact: "environment" } }
     };
-
     function handleSuccess(stream) {
         window.stream = stream; // make stream available to browser console
         video.srcObject = stream;
     }
-
     function handleError(error) {
         console.log('navigator.MediaDevices.getUserMedia error: ', error.message, error.name);
     }
-
     navigator.mediaDevices.getUserMedia(constraints).then(handleSuccess).catch(handleError);
-
     function gotDevices(deviceInfos) {
         for (let i = 0; i !== deviceInfos.length; ++i) {
             const deviceInfo = deviceInfos[i];
@@ -79,6 +51,7 @@
             option.value = deviceInfo.deviceId;
             
             if (deviceInfo.kind === 'videoinput') {
+                alert(deviceInfo.deviceId);
                 option.text = deviceInfo.label || `camera ${videoSelect.length + 1}`;
                 videoSelect.appendChild(option);
             } else {
@@ -86,17 +59,13 @@
             }
         }
     }
-
     function start() {
         const videoSource = videoSelect.value;
-
         const constraints = {
             video: { deviceId: { exact: videoSource } }
         };
-
         navigator.mediaDevices.getUserMedia(constraints).then(handleSuccess).catch(handleError);
         
     }
-
     videoSelect.onchange = start;
 </script>
