--- a/JSCamera.html
+++ b/JSCamera.html
@@ -12,8 +12,19 @@
             display: flex;
         }
 
-        p.left {
-            padding-right: 300px;
+        .left {
+            position: absolute;
+            left: 50px;
+            top: 5em;
+            height: 40em;
+            z-index: 1000;
+        }
+        .right {
+            position: absolute;
+            right: 50px;
+            top: 5em;
+            height: 40em;
+            z-index: 1000;
         }
 
         #videoSource {
@@ -35,7 +46,7 @@
         }
 
         #container {
-            /* display: inline-grid; */
+            position: relative;
         }
 
         .mirrored {
@@ -61,6 +72,8 @@
 
 <body>
     <div id="container">
+        <image class="left" src="boundary.svg"></image>
+        <image class="right mirrored" src="boundary.svg"></image>
 
         <video class="mirrored user" playsinline autoplay></video>
         <canvas class="hidden"></canvas>
@@ -84,7 +97,8 @@
     const videoSelect = document.querySelector('select#videoSource');
     const switchCamera = document.querySelector('.switch');
 
-    
+   
+
     //navigator.mediaDevices.enumerateDevices().then(gotDevices);
 
     const snapShot = document.querySelector('.snapShot');
