--- a/JSCamera/index.html
+++ b/JSCamera/index.html
@@ -14,14 +14,14 @@
 
         .left {
             position: absolute;
-            left: 50px;
+            left: 3em;
             top: 5em;
             height: 40em;
             z-index: 1000;
         }
         .right {
             position: absolute;
-            right: 50px;
+            right: 3em;
             top: 5em;
             height: 40em;
             z-index: 1000;
