start of cropping

--- a/JSCamera/index.html
+++ b/JSCamera/index.html
@@ -40,7 +40,7 @@
         canvas.classList.remove("hidden");
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
-        canvas.getContext('2d').drawImage(video, 50, 0, 500, 500);
+        canvas.getContext('2d').drawImage(video,50, 0, 500, 500, 50, 0, 500, 500);
     };
 
     switchCamera.onclick = function () {
